--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.4.0",
     "firebase": "^9.22.2",
     "hamburger-react": "^2.5.0",
+    "html-to-image": "^1.11.11",
     "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
