--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^18.2.4",
     "axios": "^1.4.0",
     "firebase": "^9.22.2",
+    "formik": "^2.4.2",
     "hamburger-react": "^2.5.0",
     "html-to-image": "^1.11.11",
     "qrcode.react": "^3.1.0",
@@ -22,7 +23,8 @@
     "react-scripts": "5.0.1",
     "sass": "^1.62.1",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
