--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@types/node": "^16.18.34",
     "@types/react": "^18.2.8",
     "@types/react-dom": "^18.2.4",
+    "aos": "^3.0.0-beta.6",
     "axios": "^1.4.0",
     "firebase": "^9.22.2",
     "formik": "^2.4.2",
